--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "scripts": {
     "test": "grunt ci",
     "deploy": "gh-pages -d .temp",
-    "server": "node docs/server.js",
-    "dev": "node docs/server.js & webpack --config build/webpack.config.js --progress --colors --display-chunks --display-error-details --watch",
-    "build": "webpack --config build/webpack.build.js && webpack --config build/webpack.build.min.js"
+    "start": "node docs/server.js",
+    "dev": "node docs/server.js & webpack --config build/webpack/webpack.config.js --progress --colors --display-chunks --display-error-details --watch",
+    "build": "webpack --config build/webpack/webpack.build.dev.config.js && webpack --config build/webpack/webpack.build.prod.config.js"
   },
   "repository": {
     "type": "git",
@@ -38,17 +38,16 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel": "^5.8.29",
-    "babel-core": "^5.8.33",
+    "babel": "^6.0.14",
+    "babel-core": "^6.0.14",
     "babel-eslint": "^4.1.3",
-    "babel-loader": "^5.3.3",
+    "babel-loader": "^6.0.0",
     "babel-preset-es2015": "^6.0.14",
-    "babel-runtime": "^5.8.20",
     "browser-sync": "^2.9.1",
     "browser-sync-webpack-plugin": "^1.0.0",
     "casperjs": "^1.1.0-beta3",
     "codecov.io": "^0.1.6",
-    "css-loader": "^0.15.4",
+    "css-loader": "^0.21.0",
     "es6-promise": "^3.0.2",
     "eslint": "^1.5.1",
     "eslint-config-airbnb": "^0.1.0",
@@ -81,11 +80,12 @@
     "phantomjs": "^1.9.18",
     "semver": "^5.0.3",
     "shell-task": "^1.0.0",
-    "style-loader": "^0.12.3",
+    "style-loader": "^0.13.0",
     "template-html-loader": "0.0.3",
     "uglify-js": "^2.5.0",
     "vue-antd-docs-loader": "okoala/vue-antd-docs-loader",
-    "vue-loader": "^3.0.3",
+    "vue-hot-reload-api": "^1.2.0",
+    "vue-loader": "^6.0.3",
     "webpack": "^1.9.11"
   },
   "author": "KoalaHuang",
