--- a/package.json
+++ b/package.json
@@ -38,11 +38,13 @@
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.1.0",
-    "babel": "^6.0.14",
-    "babel-core": "^6.0.14",
+    "babel": "^6.0.15",
+    "babel-core": "^6.0.15",
     "babel-eslint": "^4.1.3",
     "babel-loader": "^6.0.0",
-    "babel-preset-es2015": "^6.0.14",
+    "babel-preset-es2015": "^6.0.15",
+    "babel-preset-stage-1": "^6.0.15",
+    "babel-preset-stage-2": "^6.0.15",
     "browser-sync": "^2.9.1",
     "browser-sync-webpack-plugin": "^1.0.0",
     "casperjs": "^1.1.0-beta3",
@@ -78,6 +80,7 @@
     "less-loader": "^2.2.1",
     "markdown-loader": "^0.1.7",
     "phantomjs": "^1.9.18",
+    "readdirp": "^2.0.0",
     "semver": "^5.0.3",
     "shell-task": "^1.0.0",
     "style-loader": "^0.13.0",
